[gd_scene load_steps=43 format=3 uid="uid://bn0sx0i60j63e"]

[ext_resource type="Script" path="res://player/player.gd" id="1_e8ijr"]
[ext_resource type="Resource" uid="uid://ga571q85g5p6" path="res://player/stats_small_frog.tres" id="2_kcubn"]
[ext_resource type="Resource" uid="uid://ce23lslh2lnxo" path="res://player/stats_big_frog.tres" id="3_71s85"]
[ext_resource type="Script" path="res://player/grapple_controller.gd" id="3_btfmq"]
[ext_resource type="Script" path="res://player/shoot_controller.gd" id="4_4ta5d"]
[ext_resource type="PackedScene" uid="uid://c8xbtbfu356pu" path="res://tbg/Hopper.tscn" id="6_1h30g"]
[ext_resource type="Script" path="res://player/AnchorDetector2D.gd" id="7_7mc6b"]
[ext_resource type="Script" path="res://levels/utils/AnchorCamera2D.gd" id="8_rvjbs"]
[ext_resource type="Script" path="res://player/damage_controller.gd" id="9_c1k7w"]
[ext_resource type="FontFile" uid="uid://ctmtaoy4888cp" path="res://assets/fonts/toxigenesis.otf" id="9_nk0xv"]
[ext_resource type="AudioStream" uid="uid://d0uv0ws5so5m" path="res://assets/audio/player/jump/player_jump_001.wav" id="11_wyo6t"]
[ext_resource type="AudioStream" uid="uid://jkyt3s4kmavr" path="res://assets/audio/player/jump/player_jump_002.wav" id="12_2knj1"]
[ext_resource type="AudioStream" uid="uid://dqku4ciwn8wcq" path="res://assets/audio/player/jump/player_jump_003.wav" id="13_1w13g"]
[ext_resource type="AudioStream" uid="uid://cy5jqgocwae3h" path="res://assets/audio/player/jump/player_jump_004.wav" id="14_banci"]
[ext_resource type="AudioStream" uid="uid://cf3hwn887so4m" path="res://assets/audio/player/jump/player_jump_005.wav" id="15_hdeco"]
[ext_resource type="AudioStream" uid="uid://6tdmgvs7jnxx" path="res://assets/audio/player/jump/player_jump_006.wav" id="16_miwjt"]
[ext_resource type="AudioStream" uid="uid://bvhv3sl8qwui6" path="res://assets/audio/player/jump/player_jump_007.wav" id="17_6q1ty"]
[ext_resource type="AudioStream" uid="uid://bwf1mlwhx6fup" path="res://assets/audio/player/jump/player_jump_008.wav" id="18_778ue"]
[ext_resource type="AudioStream" uid="uid://fvrndf25c6oq" path="res://assets/audio/player/land/player_land_001.wav" id="19_c84mt"]
[ext_resource type="AudioStream" uid="uid://lmb7rmjyiefv" path="res://assets/audio/player/land/player_land_002.wav" id="20_05n6k"]
[ext_resource type="AudioStream" uid="uid://cxi3wh7wuah4d" path="res://assets/audio/player/land/player_land_003.wav" id="21_87wag"]
[ext_resource type="AudioStream" uid="uid://cvd5dyv17vekr" path="res://assets/audio/player/land/player_land_004.wav" id="22_7k67m"]
[ext_resource type="AudioStream" uid="uid://cjv20qu50wdgl" path="res://assets/audio/player/land/player_land_005.wav" id="23_as4sf"]
[ext_resource type="AudioStream" uid="uid://dxlhb7lpl8b3x" path="res://assets/audio/player/land/player_land_006.wav" id="24_aol4m"]
[ext_resource type="AudioStream" uid="uid://sdbuv0x4gfsk" path="res://assets/audio/player/land/player_land_007.wav" id="25_23h4x"]
[ext_resource type="AudioStream" uid="uid://crtlnfavclcb8" path="res://assets/audio/player/land/player_land_008.wav" id="26_4j55m"]
[ext_resource type="AudioStream" uid="uid://cs75mp4bj7uyq" path="res://assets/audio/player/shoot/projectile_shoot_001.wav" id="27_ada1s"]
[ext_resource type="AudioStream" uid="uid://uq7yro835lnd" path="res://assets/audio/player/shoot/projectile_shoot_002.wav" id="28_ypvqo"]
[ext_resource type="AudioStream" uid="uid://usugl2yfi85y" path="res://assets/audio/player/shoot/projectile_shoot_003.wav" id="29_bnesu"]
[ext_resource type="AudioStream" uid="uid://5jp6jl4oo1yp" path="res://assets/audio/player/shoot/projectile_shoot_004.wav" id="30_vxpdt"]
[ext_resource type="AudioStream" uid="uid://b7w4y272tsced" path="res://assets/audio/player/shoot/projectile_shoot_005.wav" id="31_7enkc"]
[ext_resource type="AudioStream" uid="uid://l2spvqxs3x1u" path="res://assets/audio/player/shoot/projectile_shoot_006.wav" id="32_3lj78"]
[ext_resource type="AudioStream" uid="uid://bsuwtoo7t83g" path="res://assets/audio/player/shoot/projectile_shoot_007.wav" id="33_4yk1i"]
[ext_resource type="AudioStream" uid="uid://cq6pdepam2xit" path="res://assets/audio/player/shoot/projectile_shoot_008.wav" id="34_246nr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kymfc"]
friction = 0.0
rough = true
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knhbw"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fe6s"]
size = Vector2(128, 128)

[sub_resource type="Curve" id="Curve_0fe4q"]
_data = [Vector2(0, 0.208791), 0.0, 0.0, 0, 0, Vector2(0.5, 0.703297), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_t63c0"]
_data = [Vector2(0, 0.208791), 0.0, 0.0, 0, 0, Vector2(0.5, 0.703297), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4pt2q"]
streams_count = 8
stream_0/stream = ExtResource("11_wyo6t")
stream_1/stream = ExtResource("12_2knj1")
stream_2/stream = ExtResource("13_1w13g")
stream_3/stream = ExtResource("14_banci")
stream_4/stream = ExtResource("15_hdeco")
stream_5/stream = ExtResource("16_miwjt")
stream_6/stream = ExtResource("17_6q1ty")
stream_7/stream = ExtResource("18_778ue")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v4n8a"]
streams_count = 8
stream_0/stream = ExtResource("19_c84mt")
stream_1/stream = ExtResource("20_05n6k")
stream_2/stream = ExtResource("21_87wag")
stream_3/stream = ExtResource("22_7k67m")
stream_4/stream = ExtResource("23_as4sf")
stream_5/stream = ExtResource("24_aol4m")
stream_6/stream = ExtResource("25_23h4x")
stream_7/stream = ExtResource("26_4j55m")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ch2or"]
streams_count = 8
stream_0/stream = ExtResource("27_ada1s")
stream_1/stream = ExtResource("28_ypvqo")
stream_2/stream = ExtResource("29_bnesu")
stream_3/stream = ExtResource("30_vxpdt")
stream_4/stream = ExtResource("31_7enkc")
stream_5/stream = ExtResource("32_3lj78")
stream_6/stream = ExtResource("33_4yk1i")
stream_7/stream = ExtResource("34_246nr")

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 9
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_kymfc")
gravity_scale = 4.0
lock_rotation = true
custom_integrator = true
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_e8ijr")
stats_small_frog = ExtResource("2_kcubn")
stats_big_frog = ExtResource("3_71s85")

[node name="AnchorCamera2D" type="Camera2D" parent="."]
script = ExtResource("8_rvjbs")
max_speed = 3000.0
mass = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_knhbw")

[node name="AnchorDetector2D" type="Area2D" parent="."]
position = Vector2(0, -64)
script = ExtResource("7_7mc6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnchorDetector2D"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_0fe6s")

[node name="Rig" type="Node2D" parent="."]

[node name="HopperTransform" type="Node2D" parent="Rig"]
position = Vector2(0, -9)
scale = Vector2(15, 9)

[node name="Hopper" parent="Rig/HopperTransform" instance=ExtResource("6_1h30g")]
metadata/instanceSkins = {}

[node name="b_upperarm" parent="Rig/HopperTransform/Hopper/Composite" index="0"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="b_lowerarm" parent="Rig/HopperTransform/Hopper/Composite" index="1"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="b_leg" parent="Rig/HopperTransform/Hopper/Composite" index="3"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="b_lowerleg" parent="Rig/HopperTransform/Hopper/Composite" index="4"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="f_leg" parent="Rig/HopperTransform/Hopper/Composite" index="7"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="f_lowerleg" parent="Rig/HopperTransform/Hopper/Composite" index="10"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="eyebrows" parent="Rig/HopperTransform/Hopper/Composite" index="30"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="f_upperarm" parent="Rig/HopperTransform/Hopper/Composite" index="32"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="f_lowerarm" parent="Rig/HopperTransform/Hopper/Composite" index="33"]
texture = null
polygon = PackedVector2Array()
uv = PackedVector2Array()
bones = []

[node name="Rays" type="Node2D" parent="."]

[node name="WallSlideRayL_Top" type="RayCast2D" parent="Rays"]
position = Vector2(-49, -60)
target_position = Vector2(-30, 0)

[node name="WallSlideRayL_Down" type="RayCast2D" parent="Rays"]
position = Vector2(-49, 60)
target_position = Vector2(-30, 0)

[node name="WallSlideRayR_Top" type="RayCast2D" parent="Rays"]
position = Vector2(49, -60)
target_position = Vector2(30, 0)

[node name="WallSlideRayR_Down" type="RayCast2D" parent="Rays"]
position = Vector2(49, 60)
target_position = Vector2(30, 0)

[node name="FloorRayL" type="RayCast2D" parent="Rays"]
position = Vector2(-49, 60)
target_position = Vector2(0, 15)

[node name="FloorRayR" type="RayCast2D" parent="Rays"]
position = Vector2(49, 60)
target_position = Vector2(0, 15)

[node name="GrappleController" type="Node2D" parent="."]
script = ExtResource("3_btfmq")

[node name="GrappleRay" type="RayCast2D" parent="GrappleController"]
target_position = Vector2(1000, 0)

[node name="RopeScanLine" type="Line2D" parent="GrappleController/GrappleRay"]
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0
width_curve = SubResource("Curve_0fe4q")

[node name="Rope" type="Line2D" parent="GrappleController"]
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0
width_curve = SubResource("Curve_t63c0")

[node name="AbilityCooldown" type="Timer" parent="GrappleController"]
wait_time = 0.3
one_shot = true

[node name="ShootController" type="Node2D" parent="."]
script = ExtResource("4_4ta5d")

[node name="AbilityCooldown" type="Timer" parent="ShootController"]
wait_time = 0.5
one_shot = true

[node name="DamageController" type="Node" parent="."]
script = ExtResource("9_c1k7w")

[node name="DeathRestartDelay" type="Timer" parent="DamageController"]

[node name="DebugLabels" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LinearVelocity" type="Label" parent="DebugLabels"]
visible = false
layout_mode = 0
offset_top = -159.0
offset_right = 40.0
offset_bottom = -136.0
text = "TEXT
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TargetVelocity" type="Label" parent="DebugLabels"]
layout_mode = 0
offset_top = -250.0
offset_right = 40.0
offset_bottom = -227.0
theme_override_fonts/font = ExtResource("9_nk0xv")
theme_override_font_sizes/font_size = 41
text = "TEXT
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="State" type="Label" parent="DebugLabels"]
layout_mode = 0
offset_top = -119.0
offset_right = 40.0
offset_bottom = -96.0
theme_override_fonts/font = ExtResource("9_nk0xv")
theme_override_font_sizes/font_size = 41

[node name="JumpStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_4pt2q")

[node name="LandStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_v4n8a")

[node name="ShootStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ch2or")

[connection signal="body_entered" from="." to="DamageController" method="_on_player_body_entered"]
[connection signal="anchor_detached" from="AnchorDetector2D" to="AnchorCamera2D" method="_on_anchor_detector_2d_anchor_detached"]
[connection signal="anchor_detected" from="AnchorDetector2D" to="AnchorCamera2D" method="_on_anchor_detector_2d_anchor_detected"]
[connection signal="area_entered" from="AnchorDetector2D" to="AnchorDetector2D" method="_on_area_entered"]
[connection signal="area_exited" from="AnchorDetector2D" to="AnchorDetector2D" method="_on_area_exited"]
[connection signal="timeout" from="DamageController/DeathRestartDelay" to="DamageController" method="_on_death_restart_delay_timeout"]

[editable path="Rig/HopperTransform/Hopper"]
